--- a/semana02/dia02-reto2/index.html
+++ b/semana02/dia02-reto2/index.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="./styles.css">
+    <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <main>
+        <section class="content">
+            <h1>Stay updated!</h1>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-<main>
-  <!-- Sign-up form start -->
-  <h1>Stay updated!</h1>
-  
+            <p>
+            Join 60,000+ product managers receiving monthly updates on:
+            </p>
+            <div>
+              <ul>
+              <li> Product discovery and building what matters</li>
+              <li> Measuring to ensure updates are a success </li>
+              <li> And much more! </li>
+              </ul>
+            </div>
+              <form>
+                <p>
+                  <strong>
+                    Email address
+                  </strong>
+                </p>
+                <input type="email" placeholder="email@company.com" name="email" />
+                <button>Subscribe to monthly newsletter</button>
+              </form>
+        </section>
+    
+        <!-- Sign-up form end -->
+        <!-- Success message start -->
+        <!--
+        Thanks for subscribing!
 
-  Join 60,000+ product managers receiving monthly updates on:
+        A confirmation email has been sent to ash@loremcompany.com. 
+        Please open it and click the button inside to confirm your subscription.
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+        Dismiss message
+        -->
+        <!-- Success message end -->
 
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
-</main>
+        <section class="photo">
+        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="">
+        </section>
+        <!--
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="#">Claudia Abril</a>.
+        </div>
+        -->
+    
+    </main>
+  </body>
 </html>
