semana03 landpage css trabajando

--- a/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/index.html
+++ b/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-  <header>
+  <header class="header wrapper">/*podemos usar varias clases en un mismo objeto*/
   <img src="./images/logo.svg" alt="">
     <nav>
       <ul>
