--- a/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/index.html
+++ b/semana03/dia01-modelo-de-cajafylo-dark-theme-landing-page-master/fylo-dark-theme-landing-page-master/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-  <header class="header wrapper">
-    <img src="./images/logo.svg" />
+  <header id="top" class="header wrapper">
+    <img class="header__logo" src="./images/logo.svg" />
 
     <nav>
       <ul class="header__nav">
@@ -85,7 +85,7 @@
 
         <a href="#" class="how_works__button">
           See how Fylo works
-          <img src="./images/icon-arrow.svg" />
+          <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><circle id="b" cx="6" cy="6" r="6"/><filter x="-25%" y="-25%" width="150%" height="150%" filterUnits="objectBoundingBox" id="a"><feOffset in="SourceAlpha" result="shadowOffsetOuter1"/><feGaussianBlur stdDeviation="1" in="shadowOffsetOuter1" result="shadowBlurOuter1"/><feColorMatrix values="0 0 0 0 0.384313725 0 0 0 0 0.878431373 0 0 0 0 0.850980392 0 0 0 0.811141304 0" in="shadowBlurOuter1"/></filter></defs><g fill="none" fill-rule="evenodd"><g transform="translate(2 2)"><use fill="#000" filter="url(#a)" xlink:href="#b"/><use fill="#62E0D9" xlink:href="#b"/></g><path d="M8.582 6l-.363.35 1.452 1.4H5.333v.5h4.338L8.22 9.65l.363.35 2.074-2z" fill="#1B2330"/></g></svg>
         </a>
       </div>
     </section>
@@ -117,9 +117,8 @@
         </div>
       </article>
 
-      <article>
-        <article class="testimonial">
-          <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+      <article class="testimonial">
+        <p class="testimonial__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
         become a well-oiled collaboration machine.</p>
   
         <div class="testimonial__profile">
@@ -134,7 +133,7 @@
   </main>
 
   <footer class="footer">
-    <section class="early-access">
+    <section id="earlyAccess" class="early-access">
       <h2>Get early access today</h2>
       
       <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
@@ -173,7 +172,7 @@
         </div>
 
         <div class="footer-info__links">
-          <a href="#">Contact Us</a>
+          <a href="#earlyAccess">Contact Us</a>
           <a href="#">Terms</a>
           <a href="#">Privacy</a>
         </div>
@@ -204,5 +203,6 @@
       </div>
     </div>
   </footer>
+
+  <a href="#top" class="top">Ir arriba</a>
 </body>
-</html>
